// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox defaultChecked 1`] = `
<span
  class="za-checkbox__wrapper"
>
  <span
    class="za-checkbox za-checkbox--checked"
  >
    <span
      class="za-checkbox__inner"
    />
    <input
      checked=""
      class="za-checkbox__input"
      type="checkbox"
    />
  </span>
  <span
    class="za-checkbox__text"
  >
    foo
  </span>
</span>
`;

exports[`Checkbox disabled 1`] = `
<span
  class="za-checkbox__wrapper"
>
  <span
    class="za-checkbox za-checkbox--disabled"
  >
    <span
      class="za-checkbox__inner"
    />
    <input
      class="za-checkbox__input"
      disabled=""
      type="checkbox"
    />
  </span>
  <span
    class="za-checkbox__text za-checkbox__text--disabled"
  >
    foo
  </span>
</span>
`;

exports[`Checkbox renders correctly 1`] = `
<span
  class="za-checkbox__wrapper"
>
  <span
    class="za-checkbox za-checkbox--checked"
  >
    <span
      class="za-checkbox__inner"
    />
    <input
      checked=""
      class="za-checkbox__input"
      type="checkbox"
    />
  </span>
  <span
    class="za-checkbox__text"
  >
    foo
  </span>
</span>
`;

exports[`Checkbox.Group render defaultValue correctly 1`] = `
<div
  class="za-checkbox-group__wrapper"
>
  <div
    class="za-checkbox-group za-checkbox-group--radius"
  >
    <span
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox"
      >
        <span
          class="za-checkbox__inner"
        />
        <input
          class="za-checkbox__input"
          type="checkbox"
          value="0"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项一
      </span>
    </span>
    <span
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox za-checkbox--checked"
      >
        <span
          class="za-checkbox__inner"
        />
        <input
          checked=""
          class="za-checkbox__input"
          type="checkbox"
          value="1"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项二
      </span>
    </span>
    <span
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox"
      >
        <span
          class="za-checkbox__inner"
        />
        <input
          class="za-checkbox__input"
          type="checkbox"
          value="2"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项三
      </span>
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group render value correctly 1`] = `
<div
  class="za-checkbox-group__wrapper"
>
  <div
    class="za-checkbox-group za-checkbox-group--radius"
  >
    <span
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox za-checkbox--checked"
      >
        <span
          class="za-checkbox__inner"
        />
        <input
          checked=""
          class="za-checkbox__input"
          type="checkbox"
          value="0"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项一
      </span>
    </span>
    <span
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox"
      >
        <span
          class="za-checkbox__inner"
        />
        <input
          class="za-checkbox__input"
          type="checkbox"
          value="1"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项二
      </span>
    </span>
    <span
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox"
      >
        <span
          class="za-checkbox__inner"
        />
        <input
          class="za-checkbox__input"
          type="checkbox"
          value="2"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项三
      </span>
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group renders correctly 1`] = `
<div
  class="za-checkbox-group__wrapper"
>
  <div
    class="za-checkbox-group za-checkbox-group--radius"
  >
    <span
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox"
      >
        <span
          class="za-checkbox__inner"
        />
        <input
          class="za-checkbox__input"
          type="checkbox"
          value="0"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项一
      </span>
    </span>
    <span
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox za-checkbox--checked"
      >
        <span
          class="za-checkbox__inner"
        />
        <input
          checked=""
          class="za-checkbox__input"
          type="checkbox"
          value="1"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项二
      </span>
    </span>
    <span
      class="za-checkbox__wrapper"
    >
      <span
        class="za-checkbox"
      >
        <span
          class="za-checkbox__inner"
        />
        <input
          class="za-checkbox__input"
          type="checkbox"
          value="2"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项三
      </span>
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group type is button 1`] = `
<div
  class="za-checkbox-group__wrapper"
>
  <div
    class="za-checkbox-group za-checkbox-group--button za-checkbox-group--radius"
  >
    <button
      class="za-checkbox"
      type="button"
    >
      <span
        class="za-checkbox__text"
      >
        选项一
      </span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="0"
      />
    </button>
    <button
      class="za-checkbox"
      type="button"
    >
      <span
        class="za-checkbox__text"
      >
        选项二
      </span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="1"
      />
    </button>
    <button
      class="za-checkbox"
      type="button"
    >
      <span
        class="za-checkbox__text"
      >
        选项三
      </span>
      <input
        class="za-checkbox__input"
        type="checkbox"
        value="2"
      />
    </button>
  </div>
</div>
`;

exports[`Checkbox.Group type is cell 1`] = `
<div
  class="za-checkbox-group__wrapper"
>
  <div
    class="za-checkbox-group za-checkbox-group--cell za-checkbox-group--radius"
  >
    <div
      class="za-cell za-cell--link"
    >
      <div
        class="za-cell__inner"
      >
        <div
          class="za-cell__header"
        />
        <div
          class="za-cell__body"
        >
          <div
            class="za-cell__content"
          >
            <span
              class="za-checkbox__wrapper"
            >
              <span
                class="za-checkbox"
              >
                <span
                  class="za-checkbox__inner"
                />
                <input
                  class="za-checkbox__input"
                  type="checkbox"
                  value="0"
                />
              </span>
              <span
                class="za-checkbox__text"
              >
                选项一
              </span>
            </span>
          </div>
        </div>
        <div
          class="za-cell__footer"
        />
      </div>
    </div>
    <div
      class="za-cell za-cell--link"
    >
      <div
        class="za-cell__inner"
      >
        <div
          class="za-cell__header"
        />
        <div
          class="za-cell__body"
        >
          <div
            class="za-cell__content"
          >
            <span
              class="za-checkbox__wrapper"
            >
              <span
                class="za-checkbox"
              >
                <span
                  class="za-checkbox__inner"
                />
                <input
                  class="za-checkbox__input"
                  type="checkbox"
                  value="1"
                />
              </span>
              <span
                class="za-checkbox__text"
              >
                选项二
              </span>
            </span>
          </div>
        </div>
        <div
          class="za-cell__footer"
        />
      </div>
    </div>
    <div
      class="za-cell za-cell--link"
    >
      <div
        class="za-cell__inner"
      >
        <div
          class="za-cell__header"
        />
        <div
          class="za-cell__body"
        >
          <div
            class="za-cell__content"
          >
            <span
              class="za-checkbox__wrapper"
            >
              <span
                class="za-checkbox"
              >
                <span
                  class="za-checkbox__inner"
                />
                <input
                  class="za-checkbox__input"
                  type="checkbox"
                  value="2"
                />
              </span>
              <span
                class="za-checkbox__text"
              >
                选项三
              </span>
            </span>
          </div>
        </div>
        <div
          class="za-cell__footer"
        />
      </div>
    </div>
  </div>
</div>
`;
